# dmitui

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yaml
src/: app.rs  dmi.rs  event.rs  handlers.rs  lib.rs  main.rs  tui.rs
src/dmi/: baseboard.rs  battery.rs  cache.rs  chassis.rs  firmware.rs  memory.rs  processor.rs  slot.rs  system.rs
